fullCoast/css/style.css
/* ... */
#myZoomIn {
	position: absolute;
	top: 0;
	left: 0;
	background: #fff;
	height: 100%;
	width: 50%;
	opacity: .7;
	border-right: 1px solid black;
}

#myZoomOut {
	position: absolute;
	top: 0;
	right: 0;
	background: #fff;
	height: 100%;
	width: 50%;
	opacity: .7;
	border-left: 1px solid black;
}

.custZoom {
	margin-top: 8px;
	color: black;
}

#myHomeButton {
	position: absolute;
	top: 36px;
	height: 35px;
	width: 75px;
	cursor: pointer;
	background: #fff;
	text-align: center;
	color: black;
	opacity: .7;
	visibility: hidden;
	
}


.pullOutPage {
	position: absolute;
	overflow-x: hidden;
	top: 0;
	background: #FBFCFC;
	height: 100%;
	padding-left: 25px;
	padding-right: 25px;
	-webkit-transition: .2s right;
	-moz-transition: .2s right;
	-o-transition: .2s right;
	transition: .2s right;
}


#searchPage {
	width: 350px;
	right: -610px;
	z-index: 1001;
	/*overflow-y: scroll;*/
}

#searchCheck {
	position:absolute;
	text-align: center;
	width: 350px;
	right: 0px;
	z-index: 1002;
	height: 100%;
	background:#FBFCFC;
	visibility:hidden;
}

.pageToggle {
	position: absolute;
	top: 10px;
	right: 10px;
	color: #797D7F;
	cursor: pointer;
	font-size: 35px;
	-webkit-transition: .25s color;
	-moz-transition: .25s color;
	-o-transition: .25s color;
	transition: .25s color;
}

.pageToggle:hover {
	color: black;
}

#basemapPage {
	width: 350px;
	right: -610px;
	z-index: 1001;
	/*overflow-y: scroll;*/
}

#basemapPage .row p {
	text-align: center;
}

#basemapPage img {
	cursor: pointer;
	padding-bottom: 10px;
	-webkit-transition: .25s opacity;
	-moz-transition: .25s opacity;
	-o-transition: .25s opacity;
	transition: .25s opacity;
}

#basemapPage img:hover {
	opacity: .7;
}



#filterPage {
	width: 350px;
	right: -610px;
	z-index: 1001;
}

.myFilterButtons {
	text-align: center;
	margin-top: 50px;
	margin-bottom: 60px;
	cursor:pointer;
}

.myFilterButtons h3 {
	color: #7B7D7D;
	border-bottom: 2px solid transparent;
	-webkit-transition: .15s border-bottom, .15s color;
	-moz-transition: .15s border-bottom, .15s color;
	-o-transition: .15s border-bottom, .15s color;
	transition: .15s border-bottom, .15s color;
}

.myFilterButtons h3:hover {
	color: black;
	border-bottom: 2px solid black;
}


#featurePage {
	width: 350px;
	right: -610px;
	z-index: 1002;
	/*overflow-y:scroll;*/
	text-align: center;
}

.mobileSupFeature {
	visibility: hidden;
	color: blue;
	cursor: pointer;
}

#hoverFeaturePage {
	width: 350px;
	right: -610px;
	z-index: 1002;
	/*overflow-y: scroll;*/
	text-align: center;
}

#infoPage {
	width: 350px;
	right: -610px;
	z-index: 1001;
}

.active {
	
}

/* leaflet popup styling */
.leaflet-popup-content-wrapper .leaflet-popup-content {
	text-align: center;
	font-size: 15px;
}

.leaflet-popup-content-wrapper .leaflet-popup-content a:link{
	text-decoration: none;
	color: #1A5276;
}

.leaflet-popup-content-wrapper .leaflet-popup-content a:hover{
	text-decoration: none;
	color: #7FB3D5;
}

.leaflet-popup-content-wrapper .leaflet-popup-content a:visited{
	text-decoration: none;
	color: #1A5276;
}

.leaflet-popup-content-wrapper .leaflet-popup-content a:active{
	text-decoration: none;
	color: #1A5276;
}
/* // leaflet popup styling */

/* test */
.leaflet-popup-content-wrapper .leaflet-popup-content .deactivated a:link{
	text-decoration: none;
	color: #CCD1D1;
}

.leaflet-popup-content-wrapper .leaflet-popup-content .deactivated a:hover{
	text-decoration: none;
	color: #CCD1D1;
}

.leaflet-popup-content-wrapper .leaflet-popup-content .deactivated a:visited{
	text-decoration: none;
	color: #CCD1D1;
}

.leaflet-popup-content-wrapper .leaflet-popup-content .deactivated a:active{
	text-decoration: none;
	color: #CCD1D1;
}
/* // test */

/* test 2 */
.leaflet-top {
	top: 75px;
	left: 10px;
}

.leaflet-left {
	
}

.leaflet-control-attribution {
	margin-bottom: 60px;
}
/* //test 2 */

/* for popup */
#titlePopup {
	font-size: 20px;
}

#govPopup {
	font-size: 20px;
}

.popupLine {
	width: 70%;
}
/* // for popup */


.myCheckBox {
	width: auto;
	height: auto;
	padding: 5px;
	background: white;
	border-radius: 5px;
	border: 1px solid black;
	text-align: center;
	margin-bottom: 10px;
	cursor: pointer;
	color: black;
}

.myCheckBoxActive {
	background: #003744;
	color: white;
	background: 1px solid white;
}

.myCheckBoxHover {
	background: #003744;
	color: white;
	background: 1px solid white;
}





@media only screen and (max-width: 600px) {

	
	#sideMenu {
		visibility:hidden;
	}
	
	#title {
		visibility: hidden;
	}
	
	#mobileMenu {
		visibility: visible;
	}
	/*
	#mobileFeatureMenu {
		visibility: visible;
	}
	*/
	/*
	#mobileFilterResetMenu {
		visibility: visible;
	}
	*/
	#supBottomMenu {
		visibility: hidden;
	}
	
	#bottomLegend {
		width: 100%;
	}
	
	#bottomMenu {
		visibility: visible;
	}
	
	#searchPage {
		width: 100%;
		z-index: 1003;
	}
	
	#searchCheck {
		width: 100%;
		z-index: 1004;
	}
	
	#basemapPage {
		width: 100%;
		z-index: 1003;
	}
	
	#filterPage {
		width: 100%;
		z-index: 1003;
	}
	
	#featurePage {
		width: 100%;
		z-index: 1003;
	}
	
	#hoverFeaturePage {
		width: 100%;
	}
	
	#infoPage {
		width: 100%;
		z-index: 1003;
	}
	
	.mobileSupFeature {
		visibility: visible;
	}
	
	.leaflet-top {
		top: 0px;
		left: 0px;
	}
	
}



 

